@@ -32,6 +32,7 @@ typedef struct
 {
 	gchar *config_file;
 	gchar *default_language;
+	gchar *dictionary_dir;
 	gboolean use_msgwin;
 	gboolean check_while_typing;
 	gboolean show_toolbar_item;
