@@ -1,3 +1,10 @@
+2009-09-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/scplugin.c, src/speller.c, src/scplugin.h:
+   Add an option to the preference dialog to select a custom
+   directory to look for additional dictionary files.
+
+
 2009-09-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/scplugin.c:
